                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 29-11-2005 updated: German language file
 - 29-11-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 29-11-2005 updated: Norwegian language file (Thnx to vnm)
 - 29-11-2005 updated: French language file (Thnx to modhack)
 - 29-11-2005 updated: Dutch language file (Thnx to tijmengozer)
 - 29-11-2005 fixed: file sizes were missing in my videos.
 - 28-11-2005 fixed: Stacked .nfo file paths were incorrect.
 - 28-11-2005 added: Workaround for ReadFile() returning incorrect data at the DVD layer change - requires special version
                     of libdvdcss-2.dll (rename from libdvdcss-2.dll_layerchangehack).
 - 28-11-2005 fixed: Notifications were only showing if Kai was enabled.
 - 28-11-2005 fixed: Shuffle in Slideshow screensaver was disregarded.
 - 28-11-2005 added: Support for comma's in stacked file names.
 - 28-11-2005 fixed: same navigational bug in my pictures.
 - 28-11-2005 fixed: small navigational bug in my videos.
 - 27-11-2005 added: support for multipath bookmarks in video and pictures. its still very much experimental. use at your own risk.
 - 27-11-2005 fixed: my previous fix for paths ending with '//' caused more problems than it fixed.
 - 27-11-2005 added: manual overriding of destination path when ripping cds without cddb.
 - 27-11-2005 fixed: paths ending in '://' and ':\' were handled wrongly. thanks to deanrparty.
 - 27-11-2005 changed: Cleaned up the file stacking code, implementing a stack:// virtual directory.
 - 26-11-2005 updated: [ 1365798 ] Updated KAI-Vectors, thx to flymaster!
 - 26-11-2005 added: two new virtual directories for use in bookmarks: $MUSICPLAYLISTS, $VIDEOPLAYLISTS.